// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListTile matches snapshot when has a custom title 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 4px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3:hover {
  cursor: pointer;
  background: #d3dce6;
}

.emotion-3:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.emotion-3:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135, 155, 166, 0.5);
  box-shadow: none;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
      style={{}}
    >
      <button
        className="emotion-3"
        type="button"
      >
        Button
      </button>
    </div>
  </div>
</div>
`;

exports[`ListTile matches snapshot when has a subtitle 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  color: #172b4e;
  margin-bottom: calc(8px / 2);
}

.emotion-4 {
  color: #879ba6;
  font-size: 0.9em;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
      style={{}}
    >
      <div
        className="emotion-3"
      >
        Title
      </div>
      <div
        className="emotion-4"
      >
        Subtitle
      </div>
    </div>
  </div>
</div>
`;

exports[`ListTile matches snapshot when has a title 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  color: #172b4e;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
      style={{}}
    >
      <div
        className="emotion-3"
      >
        Title
      </div>
    </div>
  </div>
</div>
`;

exports[`ListTile matches snapshot when has a trailing and leading component 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-4 {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 4px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4:hover {
  cursor: pointer;
  background: #d3dce6;
}

.emotion-4:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.emotion-4:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135, 155, 166, 0.5);
  box-shadow: none;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  color: #172b4e;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
      style={{}}
    >
      <div
        className="emotion-3"
      >
        <button
          className="emotion-4"
          type="button"
        >
          Leading
        </button>
      </div>
    </div>
    <div
      className="emotion-5"
      style={{}}
    >
      <div
        className="emotion-6"
      >
        Title
      </div>
    </div>
    <div
      className="emotion-2"
      style={{}}
    >
      <div
        className="emotion-8"
      >
        <button
          className="emotion-4"
          type="button"
        >
          Trailing
        </button>
      </div>
    </div>
  </div>
</div>
`;
